--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,11 @@
   -webkit-backdrop-filter: blur(4.5px);
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
+  box-sizing: content-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 .day {
   background: rgb(34, 162, 195);
@@ -53,10 +58,17 @@
   );
 }
 .night {
-  background: rgb(136, 163, 241);
+  background: rgb(71, 80, 230);
   background: linear-gradient(
     216deg,
-    rgba(34, 74, 195, 1) 7%,
+    rgba(71, 80, 230, 1) 77%,
     rgba(0, 0, 0, 1) 100%
   );
+}
+
+.displayStyle {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
 }
